apollo-router/src/plugins/telemetry/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__fmt_layer__tests__json_logging_attributes.snap
---
source: apollo-router/src/plugins/telemetry/fmt_layer.rs
assertion_line: 484
expression: buff
---
{"timestamp":"[timestamp]","level":"INFO","message":"Hello from test","event_attr":"foo","target":"uhg_custom_appollo_roouter::plugins::telemetry::fmt_layer::tests","spans":[{"another":2,"custom_dyn":"test","first":"one","name":"test"}],"resource":{}}
