apollo-router/src/plugins/telemetry/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__fmt_layer__tests__json_logging_attributes_nested_spans.snap
---
source: apollo-router/src/plugins/telemetry/fmt_layer.rs
assertion_line: 502
expression: buff.to_string()
---
{"timestamp":"[timestamp]","level":"ERROR","message":"Hello from nested test","http.method":"GET","target":"uhg_custom_appollo_roouter::plugins::telemetry::fmt_layer::tests","spans":[{"another":2,"custom_dyn":"test","first":"one","name":"test"},{"graphql.operation.kind":"Subscription","inner":-42,"two":"two","name":"nested_test"}],"resource":{}}
{"timestamp":"[timestamp]","level":"INFO","message":"Hello from test","event_attr":"foo","target":"uhg_custom_appollo_roouter::plugins::telemetry::fmt_layer::tests","spans":[{"another":2,"custom_dyn":"test","first":"one","name":"test"}],"resource":{}}
