apollo-router/src/plugins/telemetry/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__fmt_layer__tests__json_logging_with_custom_events_with_instrumented.snap
---
source: apollo-router/src/plugins/telemetry/fmt_layer.rs
assertion_line: 793
expression: buff.to_string()
---
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","http.response.body":"{\"foo\": \"bar\"}","http.response.body.size":125,"message":"my message","kind":"my_custom_event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"ERROR","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","message":"Hello from test","http.method":"GET","target":"uhg_custom_appollo_roouter::plugins::telemetry::fmt_layer::tests"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","http.request.body":"Body(Empty)","http.request.headers":"{\"content-length\": \"0\", \"custom-header\": \"val1\", \"x-log-request\": \"log\"}","http.request.method":"GET","http.request.uri":"http://example.com/","http.request.version":"HTTP/1.1","message":"","kind":"router.request","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","http.request.body.size":0,"message":"my event message","kind":"my.request_event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","http.response.body":"Body(Full(b\"{\\\"data\\\":{\\\"data\\\":\\\"res\\\"}}\"))","http.response.headers":"{\"content-length\": \"25\", \"custom-header\": \"val1\", \"x-log-request\": \"log\"}","http.response.status":"200 OK","http.response.version":"HTTP/1.1","message":"","kind":"router.response","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","http.response.body.size":25,"message":"my response event message","kind":"my.response_event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","http.request.body":"{\"query\":\"query { foo }\"}","http.request.headers":"{\"content-type\": \"application/json\", \"x-log-request\": \"log\"}","http.request.method":"POST","http.request.uri":"http://default/","http.request.version":"HTTP/1.1","message":"","kind":"supergraph.request","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","message":"my event message","kind":"my.request.event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"WARN","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","message":"my response event message","kind":"my.response_event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","message":"my event message","kind":"my.subgraph.request.event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"ERROR","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","my.custom.attribute":["{\"id\":1234,\"name\":\"first_name\"}","{\"id\":567,\"name\":\"second_name\"}"],"response_status":200,"subgraph.name":"subgraph","message":"my response event message","kind":"my.subgraph.response.event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"INFO","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","message":"my event message","kind":"my.subgraph.request.event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
{"timestamp":"[timestamp]","level":"ERROR","trace_id":"00000000000000000000000000000000","span_id":"0000000000000000","my.custom.attribute":"[[{\"id\":1234,\"name\":\"first_name\"},{\"id\":567,\"name\":\"second_name\"}],{\"foo\":\"bar\"}]","response_status":200,"subgraph.name":"subgraph_bis","message":"my response event message","kind":"my.subgraph.response.event","target":"uhg_custom_appollo_roouter::plugins::telemetry::config_new::events"}
