apollo-router/src/plugins/telemetry/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__fmt_layer__tests__text_logging_attributes.snap
---
source: apollo-router/src/plugins/telemetry/fmt_layer.rs
assertion_line: 449
expression: buff
---
[2m[timestamp][0m [32mINFO[0m [2mtest{another=2,custom_dyn=test,first=one,} [0m[2m[0m Hello from test [3mevent_attr[0m[2m=[0m"foo"
