apollo-router/src/plugins/telemetry/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__fmt_layer__tests__text_logging_with_custom_events.snap
---
source: apollo-router/src/plugins/telemetry/fmt_layer.rs
assertion_line: 602
expression: buff.to_string()
---
[timestamp] INFO test{another=2,custom_dyn=test,first=one,}  http.response.body={"foo": "bar"} http.response.body.size=125 my message kind=my_custom_event
[timestamp] ERROR test{another=2,custom_dyn=test,first=one,}  Hello from test http.method="GET"
