apollo-router/src/plugins/telemetry/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__fmt_layer__tests__text_logging_without_span_list.snap
---
source: apollo-router/src/plugins/telemetry/fmt_layer.rs
assertion_line: 551
expression: buff.to_string()
---
[timestamp] ERROR  Hello from nested test http.method="GET"
[timestamp] INFO  Hello from test event_attr="foo"
